# agda2hs

./: .buildinfo  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  DEVELOPER.md  HsUtils.hs  LICENSE  Main.hs  Makefile  README.md  Test.agda  agda2hs.agda-lib  agda2hs.cabal  agda2hs.nix  cabal.project  features.html  fix-whitespace.yaml  flake.nix  genindex.html  index.html  introduction.html  objects.inv  rewrite-rules-example.yaml  search.html  searchindex.js  shell.nix  tutorials.html
.github/workflows/: ci.yml  docs.yml  nix-ci.yml
_sources/: features.md.txt  index.md.txt  introduction.md.txt  tutorials.md.txt
docs/: requirements.txt
docs-tmp/: environment.yaml  index.rst
docs/source/: conf.py  features.md  index.md  introduction.md  tutorials.md
lib/: Haskell.Prelude.html  Haskell.Prim.Absurd.html  Haskell.Prim.Applicative.html  Haskell.Prim.Bool.html  Haskell.Prim.Bounded.html  Haskell.Prim.Char.html  Haskell.Prim.Either.html  Haskell.Prim.Enum.html  Haskell.Prim.Eq.html  Haskell.Prim.Foldable.html  Haskell.Prim.Functor.html  Haskell.Prim.IO.html  Haskell.Prim.Int.html  Haskell.Prim.Integer.html  Haskell.Prim.List.html  Haskell.Prim.Maybe.html  Haskell.Prim.Monad.html  Haskell.Prim.Monoid.html  Haskell.Prim.Num.html  Haskell.Prim.Ord.html  Haskell.Prim.Show.html  Haskell.Prim.String.html  Haskell.Prim.Traversable.html  Haskell.Prim.Word.html  Haskell.Prim.html  index.html
lib/Haskell/: Law.agda  Prelude.agda  Prim.agda
lib/Haskell/Control/: Applicative.agda  Exception.agda  Monad.agda
lib/Haskell/Data/: Char.agda  List.agda  Map.agda  Maybe.agda
lib/Haskell/Extra/: Dec.agda  Delay.agda  Erase.agda  Loop.agda  Refinement.agda  Sigma.agda  Singleton.agda  Thunk.agda
lib/Haskell/Law/: Applicative.agda  (+16 more)
lib/agda2hs/: agda2hs.agda-lib
lib/base/: base.agda-lib
lib/containers/: CHANGELOG.md  README.md  agda2hs-libraries  containers-prop.cabal  containers.agda-lib  generate-haskell.sh
lib/containers/agda/: Containers.agda  EverythingContainers.agda  containers.agda
lib/containers/agda/Data/: Map.agda  Set.agda
lib/containers/agda/Data/Map/: Maybe.agda  Prop.agda
lib/containers/agda/Data/Set/: Prop.agda
lib/containers/agda/Haskell/Data/: Map.agda  Set.agda
lib/containers/agda/Test/Agda2Hs/Data/: Map.agda  Set.agda
lib/containers/haskell/: Containers.hs  containers.hs
lib/containers/haskell/Test/Agda2Hs/Data/: Map.hs  Set.hs
nix/: agda2hs.nix  default.nix  lib.nix  shell.nix
release-notes/: 1.0.md  1.1.md  1.2.md  1.3.md
src/: AgdaInternals.hs  Main.hs
src/Agda2Hs/: AgdaUtils.hs  Builtins.hs  Compile.hs  Config.hs  HsUtils.hs  Pragma.hs  Render.hs
src/agda2hs-mode/: Main.hs
test/: .gitignore  Agda.Builtin.Bool.html  Agda.Builtin.Char.html  Agda.Builtin.Equality.html  Agda.Builtin.Float.html  Agda.Builtin.FromNat.html  Agda.Builtin.FromNeg.html  Agda.Builtin.FromString.html  Agda.Builtin.Int.html  Agda.Builtin.List.html  Agda.Builtin.Maybe.html  Agda.Builtin.Nat.html  Agda.Builtin.Reflection.html  Agda.Builtin.Sigma.html  Agda.Builtin.Size.html  Agda.Builtin.Strict.html  Agda.Builtin.String.html  Agda.Builtin.Unit.html  Agda.Builtin.Word.html  Agda.Primitive.html  Agda.css  AllCubicalTests.agda  AllCubicalTests.html  AllFailTests.agda  AllFailTests.html  AllRuntimeCheckFailTests.agda  AllRuntimeCheckTests.agda  AllTests.agda  AllTests.html  Assert.agda  Assert.html  AutoLambdaCaseInBind.agda  AutoLambdaCaseInBind.html  AutoLambdaCaseInCase.agda  AutoLambdaCaseInCase.html  BangPatterns.agda  BangPatterns.html  CanonicalInstance.agda  CanonicalInstance.html  Coerce.agda  (+337 more)
test/Cubical/: StreamFusion.agda
test/Fail/: BadBuiltinImport.agda  ClashingImport.agda  Copatterns.agda  Copatterns.err  DerivingParseFailure.agda  ErasedPatternLambda.agda  ErasedRecordParameter.agda  ExplicitInstance.agda  ExplicitInstance.hs  ExplicitInstance2.agda  ExplicitInstance2.err  Fixities.agda  Fixities.err  Inline.agda  Inline2.agda  InvalidName.agda  InvalidName.err  Issue113a.agda  Issue113b.agda  Issue113b.err  Issue119.agda  Issue119.err  Issue125.agda  Issue142.agda  Issue145.agda  Issue146.agda  Issue146.err  Issue150.agda  Issue154.agda  Issue169-record.agda  Issue169-record.err  Issue185.agda  Issue223.agda  Issue306a.agda  Issue306b.agda  Issue306b.err  Issue306c.agda  Issue320.agda  Issue320.err  Issue357a.agda  (+38 more)
test/Succeed/: Assert.agda  AutoLambdaCaseInBind.hs  AutoLambdaCaseInCase.hs  CanonicalInstance.agda  Coerce.hs  ConstrainedInstance.agda  ConstrainedInstance.hs  CustomTuples.agda  Default.agda  Default.hs  DefaultMethods.hs  Delay.hs  DoNotation.agda  DoNotation.hs  EraseType.agda  ErasedLocalDefinitions.agda  ErasedPatternLambda.agda  ErasedTypeArguments.agda  ErasedTypeArguments.hs  Fixities.hs  HeightMirror.agda  IOFile.agda  IOInput.hs  Importer.hs  Inlining.hs  Issue107.hs  Issue115.agda  Issue145.hs  Issue200.agda  Issue218.agda  Issue218.hs  Issue251.hs  Issue257.hs  Issue264.agda  Issue273.hs  Issue301.agda  Issue305.agda  Issue306.hs  Issue308.agda  Issue309.agda  (+45 more)
test/fail/: index.html
test/golden/: AllCubicalTests.hs  AllRuntimeCheckTests.hs  AllTests.hs  Assert.hs  AutoLambdaCaseInBind.hs  AutoLambdaCaseInCase.hs  BadBuiltinImport.err  BangPatterns.hs  CanonicalInstance.hs  ClashingImport.err  Coerce.hs  Coinduction.hs  CommonQualifiedImports.hs  CompileTo.hs  ConstrainedInstance.hs  Copatterns.err  CubicalTests.hs  CustomTuples.hs  Datatypes.hs  Default.hs  DefaultMethods.hs  Delay.hs  Deriving.hs  DerivingParseFailure.err  DoNotation.hs  EraseType.hs  ErasedLocalDefinitions.hs  ErasedPatternLambda.err  ErasedPatternLambda.hs  ErasedPatternLambda2.hs  ErasedPatternLambda3.hs  ErasedRecordParameter.err  ErasedTypeArguments.hs  ExplicitInstance.err  ExplicitInstance2.err  Fixities.err  Fixities.hs  GadtSyntax.hs  HeightMirror.hs  IOFile.hs  (+129 more)
tui/: Main.hs  README.md  tui.cabal
tutorials/example-basics/: HelloWorld.agda  HelloWorld.hs  example-basics.agda-lib
tutorials/example-proofs/: Ascending.agda  Triangle.agda  example-proofs.agda-lib
tutorials/example-structure/: example-structure.agda-lib  script.sh
(+184 files in other folders)
