name:                tui
version:             0.1
author:              Orestis Melkonian
maintainer:          melkon.or@gmail.com
copyright:           Orestis Melkonian, 2022
category:            Language, Compiler, TUI
build-type:          Simple
cabal-version:       >=1.10
synopsis:            Terminal UI for quick inspection of translations.

executable tui-io
  main-is:          Main.hs
  build-depends:    base >=4.10 && <4.16,
                    microlens >= 0.3.0.0,
                    microlens-th,
                    vty >= 5.26,
                    brick >= 0.50,
                    directory >= 1.2.6.2 && < 1.4,
                    process >= 1.6.8
  default-language: Haskell2010
  ghc-options:      -threaded
  extra-libraries:  pthread

